Issue #12672: fix code samples in extending/newtypes.html for PEP-7 compliance